manifest/super-heroes/heroes-app.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rest-heroes
    application: heroes-service
    system: quarkus-super-heroes
  name: rest-heroes
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
  type: ClusterIP



---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: "heroes-db"
  labels:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app: rest-heroes
    application: heroes-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: rest-heroes
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: heroes-service
      app.kubernetes.io/name: rest-heroes
  template:
    metadata:
      annotations:
        app.openshift.io/connects-to: "heroes-db"
      labels:
        app: rest-heroes
        application: heroes-service
        system: quarkus-super-heroes
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/part-of: heroes-service
        app.kubernetes.io/name: rest-heroes
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/asuksunt/rest-heroes:1.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-heroes
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi


---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: rest-heroes
    application: heroes-service
    system: quarkus-super-heroes
  name: rest-heroes
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: rest-heroes
