manifest/super-heroes/statistics-app.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
  name: event-statistics
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
  type: ClusterIP


---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: ""
  labels:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: event-statistics
      app.kubernetes.io/part-of: event-stats
  template:
    metadata:
      annotations:
        app.openshift.io/connects-to: ""
      labels:
        app: event-statistics
        application: event-stats
        system: quarkus-super-heroes
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: event-statistics
        app.kubernetes.io/part-of: event-stats
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/asuksunt/event-statistics:1.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: event-statistics
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi


---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
  name: event-statistics
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: event-statistics
