manifest/super-heroes/ui-super-heroes-app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui-super-heroes
    application: super-heroes
    system: quarkus-super-heroes
    app.openshift.io/runtime: nodejs
    app.kubernetes.io/part-of: super-heroes
  annotations:
    app.openshift.io/connects-to: rest-fights
  name: ui-super-heroes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-super-heroes
      application: super-heroes
  template:
    metadata:
      labels:
        app: ui-super-heroes
        application: super-heroes
        system: quarkus-super-heroes
    spec:
      containers:
        - image: quay.io/asuksunt/ui-super-heroes:1.0
          name: ui-super-heroes
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
          serviceAccountName: ui
          serviceAccount: ui
          securityContext: {}


---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ui-super-heroes
    application: super-heroes
    system: quarkus-super-heroes
  name: ui-super-heroes
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: ui-super-heroes
    application: super-heroes
  type: ClusterIP


---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ui-super-heroes
  labels:
    app: ui-super-heroes
    application: super-heroes
    system: quarkus-super-heroes
spec:
  to:
    kind: Service
    name: ui-super-heroes
  port:
    targetPort: 8080
